# small-data-crop-yield-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.py
paper/: kopishynska_small_data_crop_forecasting_reliability.docx
reports/: climate_sensitivity.csv  correlations_kukurudza.csv  correlations_pshenytsia.csv  correlations_sonyashnyk.csv  data_inventory.csv  decision_threshold_sensitivity.csv  forecast_cards.csv  imported_multi_region_files.csv  lag_sensitivity.csv  maize_diagnostics.csv  metrics.csv  metrics_arima.csv  metrics_baselines_summary.csv  metrics_by_scenario.csv  metrics_leaderboard.csv  multi_region_feature_group_ablation.csv  multi_region_forecast_cards.csv  multi_region_prediction_band_summary.csv  multi_region_prediction_bands.csv  multi_region_recommended_methods.csv  multi_region_reliability_summary.md  novelty_evidence_table.csv  prediction_band_summary.csv  prediction_bands.csv  recommended_methods.csv  region_comparison_summary.csv  reliability_summary.md  robustness_2020_2024.csv  shap_top_elasticnet_kukurudza_in_season.csv  shap_top_elasticnet_kukurudza_lag_only.csv  shap_top_elasticnet_pshenytsia_in_season.csv  shap_top_elasticnet_pshenytsia_lag_only.csv  shap_top_elasticnet_sonyashnyk_in_season.csv  shap_top_elasticnet_sonyashnyk_lag_only.csv  shap_top_lightgbm_kukurudza_in_season.csv  shap_top_lightgbm_kukurudza_lag_only.csv  shap_top_lightgbm_pshenytsia_in_season.csv  shap_top_lightgbm_pshenytsia_lag_only.csv  shap_top_lightgbm_sonyashnyk_in_season.csv  shap_top_lightgbm_sonyashnyk_lag_only.csv  (+9 more)
tests/: test_diagnostics.py  (+3 more)
(+438 files in other folders)
