[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "small-data-crop-yield-forecasting"
version = "0.1.0"
description = "Baseline-first crop yield forecasting workflow for small official agricultural datasets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "polars==1.7.1",
    "python-dateutil",
    "typer",
    "pydantic",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "shap",
    "rich",
    "joblib",
    "statsmodels",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
